<resources>
    <string name="app_name">Hisoka challenge</string>
    <string name="connexionNom">Connection</string>
    <string name="loginTitle">Login</string>
    <string name="hintLogin">Username</string>
    <string name="passwordTitle">password</string>
    <string name="hintpassword" translatable="false">******</string>
    <string name="connexionButton">Connect</string>
    <string name="labelCheckLogin">Remember me</string>
    <string name="challengeEnCours">Ongoing Challenges</string>
    <string name="titreChallenge">Title</string>
    <string name="image_dessin">drawing</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_connexion">Login</string>
    <string name="menu_challenge_en_cours">Ongoing Challenges</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_param">Settings</string>
    <string name="connexion">Connection</string>
    <string name="challenge_en_cours">Ongoing challenge</string>
    <string name="statistiques">Statistics</string>
    <string name="desctitle">Description</string>
    <string name="imgtitleplaceholder">Challenge\'s Theme</string>
    <string name="temps">Time to draw :</string>
    <string name="btnBrowse">Browse</string>
    <string name="btnParticipe">Participate</string>
    <string name="chronoTitle">Time to draw</string>
    <string name="confirmePartTitle">Confirm participation</string>
    <string name="confirmerLabel">Confirm ?</string>
    <string name="nomChall">"Challenge's name "</string>
    <string name="descChall" translatable="false">description</string>
    <string name="placeholderTemps" translatable="false">time</string>
    <string name="dateFinph" translatable="false">end_date</string>

    <string name="pseudoTitre">Your username is :</string>
    <string name="btn_modifier">Modify password</string>
    <string name="hintUsername">"new Username "</string>
    <string name="profil">Account</string>
    <string name="btn_valider">Confirm new password</string>

    <string name="InscriptionTitle">Sign up</string>
    <string name="passwordTitleConf">Confirm password</string>
    <string name="inscriptionButton">Sign up !</string>
    <string name="signup">Sign up</string>
    <string name="ErrorInscriptionMDP">Oops ! Make sure both password are the same !</string>
    <string name="ErrorInscriptionUsername">Sorry, this username is already taken.</string>
    <string name="ErrorInscriptionInput">Make sure all fields are completed.</string>
    <string name="error">Error : This challenge does not exist.</string>
    <string name="ErrorConnexion">Cannot find user, try again.</string>
    <string name="navDeco">Disconnect</string>
    <string name="decoLabel">"You've successfuly disconnect ! "</string>
    <string name="buttonDeco">Go back home</string>

    <string name="txtNewPassword">Enter your new password :</string>
    <string name="theme">Theme</string>

    <string name="titleCreationChall">Create a challenge !</string>
    <string name="NomChallLabel">Name</string>
    <string name="hintTitleChall" translatable="false">Hisoka</string>
    <string name="descChalllabel">Description</string>
    <string name="hintDescChall">Enter your description text…</string>
    <string name="themeLabel">Challenge\'s theme</string>
    <string name="infoTheme">Enter the url of the image you want people to draw.</string>
    <string name="hintTheme" translatable="false">https://linkToTheimageFile.jpg</string>
    <string name="labelTimer">How long to draw ? (minutes)</string>
    <string name="hintTimer" translatable="false">30</string>
    <string name="dateFinLabel">End date</string>
    <string name="btnCreate">Create challenge !</string>
    <string name="gotoCreateChall">Create a challenge</string>
    <string name="errorCreateChallEmpty">Please fill all field.</string>
    <string name="no_participation_challenge">There is no participation for this challenge</string>
    <string name="text_validation_password_updated">Your password has been updated</string>
    <string name="txt_validate_password_not_updated">The old password thaht you entered is wrong</string>
    <string name="dateFin">"End the : "</string>
    <string name="minutes" translatable="false">" minutes"</string>
    <string name="connexionImpossible">Cannot find user.</string>
    <string name="connexionImpossibleServ">It seems we cannot connect to the server, please try again later.</string>
    <string name="invalidInfo">Invalid informations</string>
    <string name="toastVoteDeja">You have already voted !</string>
    <string name="toatConnexionVote">You must be logged in.</string>
    <string name="ActualPasswordDisplay">Enter your actual password :</string>
    <string name="NewPasswordDisplay">Enter your new password :</string>
    <string name="corrupted_response_data">Informations received from the database are corruped, please try again</string>
    <string name="server_desync">The actual user does not exist in the remote database</string>
    <string name="oldPasswordConfirm">Confirm your actual password</string>
    <string name="communication_error">Error while communicating with the server</string>
    <string name="unableToSaveParticipation">Couldn\'t save the participation, try again later</string>
    <string name="unableToSaveDrawing">Couldn\'t save the drawing, try again later</string>
    <string name="unableToSaveToImgur">Couldn\'t upload the drawing to Imgur, try again later</string>
    <string name="errorLoadChall">Couldn\'t load challenges from server</string>
    <string name="unableToSaveChallenge">Couldn\'t save the challenge, try again later</string>
</resources>