<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:id="@+id/drawerLayout"
    android:background="@color/white"
    tools:context=".CreationChallActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="30px"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30px"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/titleCreationChall">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/NomChallLabel">

            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTitleChall"
                android:id="@+id/inputNameChall"
                >

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/descChalllabel">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintDescChall"
                android:id="@+id/inputDesc"
                >
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/themeLabel">

            </TextView>
            <TextView
                android:paddingTop="15px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTheme">

            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintTheme"
                android:id="@+id/inputTheme"
                >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">
                <TextView
                    android:paddingTop="15px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelTimer">

                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberSigned"
                    android:hint="@string/hintTimer"
                    android:id="@+id/inputTimer"
                    >
                </EditText>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">
                <TextView
                    android:paddingTop="15px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dateFinLabel">

                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:hint="day/month/year"
                    android:id="@+id/inputEndDate"
                    >
                </EditText>

            </LinearLayout>

            <TextView
                android:id="@+id/errorCreateChall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FF0000">

            </TextView>

            <Button
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCreate"
                android:onClick="onCreateChall">

            </Button>

        </LinearLayout>

    </ScrollView>

<com.google.android.material.navigation.NavigationView
android:id="@+id/navigation_menu"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="start"
app:headerLayout="@layout/header"
app:menu="@menu/drawer_menu">
</com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
