<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30px"
    android:gravity="center"
    tools:context=".Profil">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pseudoTitre"
        android:gravity="center"
        android:layout_weight="0"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/inputNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:visibility="gone"
        android:hint="@string/hintUsername"
        android:text="" />

    <TextView
        android:id="@+id/pseudoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="0"
        android:textSize="35sp"
        android:layout_marginBottom="35dp"
        />



    <Button
        android:id="@+id/btn_modifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_modifier"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:onClick="modifier_username"
        />
    <Button
        android:id="@+id/btn_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_valider"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:visibility="gone"
        android:onClick="valider_username"
        />
</LinearLayout>
